--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas width="320" height="640" id="game"></canvas>
+	<canvas width="320px" height="640px" id="game"></canvas>
   
 
 
@@ -15,4 +15,4 @@
    
 </html>
 
-</html>
+
